--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,16 @@
     xml:lang="{% firstof LANGUAGE_CODE 'en' %}"
     lang="{% firstof LANGUAGE_CODE 'en' %}">
   <head>
-    <title>{% block title %}{% endblock %} - Nonrel-testapp</title>
+    <title>CrunchTime! Table Tennis Tournament{% block title %}{% endblock %}</title>
 
     {% block css %}
+    <link href='http://fonts.googleapis.com/css?family=Cantarell&subset=latin' rel='stylesheet' type="text/css" />
+    <link href="{{ MEDIA_URL }}css/main.css" type="text/css" rel="stylesheet" />
     {% endblock %}
 
     {% block preload_js %}
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+    
     {% endblock %}
 
     {% block extra-head %}{% endblock %}
@@ -19,34 +23,15 @@
 
   <body>
     <div id="header">
-      <a id="logo" href="/">Nonrel-testapp</a>
     </div>
 
-    <div class="columns">
-      <div id="content" class="column">
-        {% block content-header %}
-          {% if error %}<div class="error">{{ error }}</div>{% endif %}
-          {% if info %}<div class="info">{{ info }}</div>{% endif %}
-          {% if messages %}
-            {% for message in messages %}
-              <div class="info">{{ message }}</div>
-            {% endfor %}
-          {% endif %}
-        {% endblock %}
-
-        {% block content %}{% endblock %}
-      </div>
-
-      <div id="sidebar" class="column">
-        {% block sidebar %}
-        {% endblock %}
-      </div>
+    <div class="content">
+	{% block content %}
+	{% endblock %}
     </div>
 
     <div id="footer">
-      <p>Powered by <a href="http://www.allbuttonspressed.com/projects/django-nonrel">Django-nonrel</a></p>
     </div>
-
     {% block js %}
     {% endblock %}
   </body>
