--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}It works!{% endblock %}
+{% block title %}{% endblock %}
 
 {% block content %}
 <h1>It works!</h1>
