--- a/templates/home.html
+++ b/templates/home.html
@@ -2,24 +2,21 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-<h1>It works!</h1>
+<div id="navbar">
+<a href="/people">people</a> |
+<a href="/rules">rules</a> |
+<a href="/brackets">brackets</a> |
+<a href="/prizes">prizes</a>
+</div>
 <p>
-Your Django-nonrel installation is working fine.
-Now go and build something useful with it. :)
-</p>
-
+<h1>Welcome.</h1>
 <p>
-Also, make sure you follow the
-<a href="http://www.allbuttonspressed.com/blog/django">Django-nonrel & webdev blog</a>,
-so you don't miss any new features and improvements.
+You think you can play ping pong? You have been playing with your coworkers for months, and you probably think highly of your game.  Now is your chance to show what you've got.
 </p>
-
 <p>
-If you're new to Django you should take a look at the
-<a href="http://docs.djangoproject.com/en/dev/">Django documentation</a>
-and the
-<a href="http://www.djangobook.com/">Django book</a>.
-You'll also find <a href="http://djangosnippets.org/">djangosnippets</a>
-very useful.
+Beginning November 1<sup>st</sup>, we will have a low key tournament for both doubles and singles. This site will rock info
+on the players, the brackets, and the results, so stay tuned...
 </p>
+<br />
+<br />
 {% endblock %}
