--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,75 @@
 body {
 	font-family: "Cantarell", arial, serif;
+	margin: 0;
+	padding: 0;
+}
+#main {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+#main, body {
+	background: #D5E3EF; /* old browsers */
+	background: -moz-linear-gradient(left, #D5E3EF 1%, #eeeeee 15%, #eeeeee 85%, #D5E3EF 100%); /* firefox */
+	background: -webkit-gradient(linear, left top, right top, color-stop(1%,#D5E3EF), color-stop(15%,#eeeeee), color-stop(85%,#eeeeee), color-stop(100%,#D5E3EF)); /* webkit */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#D5E3EF', endColorstr='#D5E3EF',GradientType=1 ); /* ie */
+}
+
+#navbar {
+	width: 100%;
+	text-align: right;
+}
+#navbar, #navbar a {
+	color: #666;
+	text-decoration: none;
+}
+#navbar a:hover {
+	text-decoration: underline;
 }
 
 * { font-family: 'Cantarell', arial, serif; }
+
+#logo {
+	display: block;
+	text-indent: -100em;
+	background-image: url(../img/logo.png);
+	width: 400px;
+	height: 143px;
+	padding: 0;
+	margin: 0;
+}
+#footer {
+	font-family: "Times New Roman";
+	font-size: 8pt;
+	text-align: center;
+	color: #999;
+}
+
+h1 { font-family: 'Yanone Kaffeesatz', arial, serif; }h1 { font-family: 'Yanone Kaffeesatz', arial, serif; }
+
+#content {
+	width: 650px;
+	float: left;
+}
+
+#container {
+	width: 900px;
+	margin: auto;
+}
+
+#countdown {
+	width: 100px;
+	float: right;
+}
+
+
+.rounded-bubble {
+	background-color: #fff;
+	margin: auto;
+	padding: 0 20px 20px;
+	text-align: left;
+	border: 1px solid black;
+	-webkit-border-radius: 15px;
+	-moz-border-radius: 15px;
+}
