--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,7 +46,7 @@ body {
 	color: #999;
 }
 
-h1 { font-family: 'Yanone Kaffeesatz', arial, serif; }h1 { font-family: 'Yanone Kaffeesatz', arial, serif; }
+h1 { font-family: 'Yanone Kaffeesatz', arial, serif; }
 
 #content {
 	width: 650px;
@@ -58,10 +58,7 @@ h1 { font-family: 'Yanone Kaffeesatz', arial, serif; }h1 { font-family: 'Yanone 
 	margin: auto;
 }
 
-#countdown {
-	width: 100px;
-	float: right;
-}
+
 
 
 .rounded-bubble {
