--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% extends "base_html.html" %}
 {% block css %}
+    {{ block.super }}
     <link href="{{ MEDIA_URL }}css/main.css" type="text/css" rel="stylesheet" />
     <link href="{{ MEDIA_URL }}css/countdown.css" type="text/css" rel="stylesheet" />
 {% endblock %}
