Fix w3c validation error

--- a/templates/base_html.html
+++ b/templates/base_html.html
@@ -11,7 +11,7 @@
 
     {% block css %}
     <link href='http://fonts.googleapis.com/css?family=Cantarell&amp;subset=latin' rel='stylesheet' type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz&amp;subset=latin' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz&amp;subset=latin' rel='stylesheet' type='text/css' />
     {% endblock %}
 
     {% block preload_js %}
