--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 {% load nav %}
 {% block css %}
     {{ block.super }}
-    <link href="{{ MEDIA_URL }}css/main.css" type="text/css" rel="stylesheet" />
+    <link href="{{ MEDIA_URL }}css/main.css?3" type="text/css" rel="stylesheet" />
     <link href="{{ MEDIA_URL }}css/countdown.css" type="text/css" rel="stylesheet" />
 {% endblock %}
 {% block preload_js %}
@@ -77,7 +77,7 @@
 				}});
 			$("#navbar a").bind("click", function () {
 			    var href = $(this).attr("href")
-			    return (href == "/" || href == "/teams" || href == "/rules");
+			    return (href != "/prizes");
 			});
 			$("#navbar a.current-place").bind("click", function (){ return false;});
 		});
