--- a/templates/base_html.html
+++ b/templates/base_html.html
@@ -16,7 +16,7 @@
 
     {% block preload_js %}
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/curvycorners.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/all-min.js?2"></script>
     {% endblock %}
 
     {% block extra-head %}{% endblock %}
