--- a/tournament/templates/tournament/divisions.html
+++ b/tournament/templates/tournament/divisions.html
@@ -3,38 +3,6 @@
 
 {% block title %}- Divisions{% endblock %}
 
-{% block preload_js %}
-   {{ block.super }}
-   <script src="{{ MEDIA_URL }}js/jquery-ui-1.8.5.custom.min.js" type="text/javascript" language="JavaScript"></script>
-   <script type="text/javascript" language="JavaScript">
-   <!--
-	(function ($){
-		var Dialog;
-		$(document).ready(function() {
-			Dialog = $("#dialog-modal");
-			Dialog.dialog({
-				height: 450,
-				width: 500,
-				modal: true,
-				autoOpen: false
-			});
-			$("#singles a.record, #doubles a.record").bind("click", function (event) {
-				var title ="Team Profile";
-				if ($(this).parent().parent().attr("id") == "singles") {
-					title = "Player Profile";
-				}
-				Dialog.dialog("option", "title", title);
-				Dialog.html("<"+"p id='wait'><"+"img src='{{ MEDIA_URL }}img/loading.gif?1' border=0 /><"+"br />Loading...<"+"/p>");
-				Dialog.dialog('open');
-				Dialog.load(this.href);
-				return false;
-			});
-		});
-	})(jQuery);
-   //-->
-  </script>
-{% endblock %}
-
 {% block css %}
     {{ block.super }}
     <link href="{{ MEDIA_URL }}css/redmond/jquery-ui-1.8.5.custom.css" type="text/css" rel="stylesheet" />
@@ -49,12 +17,16 @@ The first two weeks will consist of division playoffs. You will be responsible f
 reporting the scores back here.
 </p>
 
-<div id="dialog-modal" title="Team Profile">test</div>
+<div id="division-dialog-modal" title="Team Profile"></div>
 
 <h2>Singles</h2>
+<p>
+At the end of the first two weeks, the top two players from each division will head on off to the final 16. In addition, there
+will be two wild card picks based on set and match performance.
+</p>
 <div id="singles">
 {% for division in singles %}
-	<div class="division" id="division-{{ division.pk }}">
+	<div class="division" id="division-{{ division.name|slugify }}">
 		<h3>{{ division.name }}</h3>
 		{% for team in division.teams %}
 		{% team_item team %} <br />
@@ -64,9 +36,13 @@ reporting the scores back here.
 </div>
 
 <h2>Doubles</h2>
+<p>
+Similar to the singles tournament, the playoffs will pick two teams from each division. Then two wild card picks will round out the
+final 8 tournament.
+</p>
 <div id="doubles">
 {% for division in doubles %}
-	<div class="division" id="division-{{ division.pk }}">
+	<div class="division" id="division-{{ division.name|slugify }}">
 		<h3>{{ division.name }}</h3>
 		{% for team in division.teams %}
 		{% team_item team %} <br />
