Added player page, and more.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -172,3 +172,10 @@ h1 {
 	color: #666;
 	margin-left: 5px;
 }
+#singles a.team-name, #doubles a.team-name {
+	color: #111;
+	text-decoration: underline;
+}
+#singles a.team-name:hover, #doubles a.team-name:hover {
+	text-decoration: none;
+}
