--- a/tournament/templates/tournament/divisions.html
+++ b/tournament/templates/tournament/divisions.html
@@ -21,7 +21,7 @@ reporting the scores back here.
 
 <h2>Singles</h2>
 <p>
-At the end of the first two weeks, the top two players from each division will head on off to the final 16. In addition, there
+At the end of the first two weeks, the top two players from each division will head on to the final 16. In addition, there
 will be two wild card picks based on set and match performance.
 </p>
 <div id="singles">
