--- a/tournament/templates/tournament/team_item_include.html
+++ b/tournament/templates/tournament/team_item_include.html
@@ -1,1 +1,1 @@
-{{ team }} <a href="{{ team.get_absolute_url }}" title="Click for {{ team }}'s home page" class="record">[{{ wins }}-{{ losses }}]</a>
+<a href="{{ team.get_absolute_url }}" class="team-name" title="{{ team }}">{{ team }}</a> <a href="{{ team.get_absolute_url }}" title="Click for {{ team }}'s home page" class="record">[{{ wins }}-{{ losses }}]</a>
