--- a/tournament/templates/tournament/divisions.html
+++ b/tournament/templates/tournament/divisions.html
@@ -1,14 +1,7 @@
-{% extends "base.html" %}
+{% extends "jqueryuibase.html" %}
 {% load tournamenttags %}
 
 {% block title %}- Divisions{% endblock %}
-
-{% block css %}
-    {{ block.super }}
-    <link href="{{ MEDIA_URL }}css/redmond/jquery-ui-1.8.5.custom.css" type="text/css" rel="stylesheet" />
-{% endblock %}
-
-
 
 {% block content %}
 <h1>Divisions</h1>
