--- a/tournament/templates/tournament/player_actual_profile.html
+++ b/tournament/templates/tournament/player_actual_profile.html
@@ -16,7 +16,7 @@
 		{% with match_info.1 as future %}
 		{% with match_info.0 as historical %}
 		{% if future %}
-			<h3>Upcoming Single Matches</h3>
+			<h3>Upcoming Matches</h3>
 			<ul>
 			{% for match in future %}
 				<li>vs. {{ match.other_team }}</li>
